objects/Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Offer_Capability_2__c</fullName>
        <label>Offer – Capability[2]</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Enterprise Networking : LAN/WAN</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Meraki</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : SD-WAN</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Cisco DNA Center</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Virtual Branch</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Optical</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : IP / MPLS / Optical</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking : Mobility 2.0</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking : Crossworks</fullName>
                </value>
                <value>
                    <fullName>Managed Services Accelerator : Managed Services Accelerator</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Network / Storage</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Compute / Intersight</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Converged / HCI</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : ACI</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : CVIM</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : SAE</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Tetration</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : SAP HANA / Hadoop</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Automation and Orchestration : NSO</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Automation and Orchestration : Cloud Center</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Automation and Orchestration : UCS Software (UCSD)</fullName>
                </value>
                <value>
                    <fullName>Managed Voice : Managed Voice</fullName>
                </value>
                <value>
                    <fullName>Managed Video : Managed Video</fullName>
                </value>
                <value>
                    <fullName>Managed Contact Center : Managed Contact Center</fullName>
                </value>
                <value>
                    <fullName>Managed ATA Essential : Device Management</fullName>
                </value>
                <value>
                    <fullName>Ngena : Ngena</fullName>
                </value>
                <value>
                    <fullName>UCaaS : UCaaS</fullName>
                </value>
                <value>
                    <fullName>CCaaS : CCaaS</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking</fullName>
                </value>
                <value>
                    <fullName>Managed Services Accelerator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Capability_3__c</fullName>
        <label>Offer – Capability[3]</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Enterprise Networking : LAN/WAN</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Meraki</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : SD-WAN</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Cisco DNA Center</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Virtual Branch</fullName>
                </value>
                <value>
                    <fullName>Managed Enterprise Networking : Optical</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking : IP / MPLS / Optical</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking : Mobility 2.0</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking : Crossworks</fullName>
                </value>
                <value>
                    <fullName>Managed Services Accelerator : Managed Services Accelerator</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Network / Storage</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Compute / Intersight</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Converged / HCI</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : ACI</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : CVIM</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : SAE</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : Tetration</fullName>
                </value>
                <value>
                    <fullName>Managed DC Infrastructure : SAP HANA / Hadoop</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Automation and Orchestration : NSO</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Automation and Orchestration : Cloud Center</fullName>
                </value>
                <value>
                    <fullName>Managed Cloud Automation and Orchestration : UCS Software (UCSD)</fullName>
                </value>
                <value>
                    <fullName>Managed Voice : Managed Voice</fullName>
                </value>
                <value>
                    <fullName>Managed Video : Managed Video</fullName>
                </value>
                <value>
                    <fullName>Managed Contact Center : Managed Contact Center</fullName>
                </value>
                <value>
                    <fullName>Managed ATA Essential : Device Management</fullName>
                </value>
                <value>
                    <fullName>Ngena : CVIM</fullName>
                </value>
                <value>
                    <fullName>UCaaS : UCaaS</fullName>
                </value>
                <value>
                    <fullName>CCaaS : CCaaS</fullName>
                </value>
                <value>
                    <fullName>Managed SP Networking</fullName>
                </value>
                <value>
                    <fullName>Managed Services Accelerator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Deal_ID__c</fullName>
        <formula>Opportunity__r.DealID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expected_Book_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expected_Product_000__c</fullName>
        <formula>Opportunity__r.Expected_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Expected Product ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expected_Service_000__c</fullName>
        <formula>Opportunity__r.Expected_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Expected Service ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expected_Total_000__c</fullName>
        <description>Opportunity Expected_Total_Value</description>
        <formula>Opportunity__r.Expected_Total_Value_000_s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Expected Total ($000)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pursuit Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Qualifications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <description>Opportunity Owner Name</description>
        <formula>Opportunity__r.Owner.FirstName  + ' ' +  Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <formula>TEXT(Opportunity__r.Opportunity_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Territory_Level_01__c</fullName>
        <description>Opportunity Territory Level 01</description>
        <formula>Opportunity__r.Territory_Level_01__c</formula>
        <label>Opportunity Territory Level 01</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Territory_Level_02__c</fullName>
        <description>Opportunity Territory Level 02</description>
        <formula>Opportunity__r.Territory_Level_02__c</formula>
        <label>Opportunity Territory Level 02</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Territory_Level_03__c</fullName>
        <description>Opportunity Territory Level 03</description>
        <formula>Opportunity__r.Territory2.Level_4_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Territory Level 03</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Territory_Sales_Segment__c</fullName>
        <description>Opportunity Territory.Sales Segment</description>
        <formula>Opportunity__r.Territory2.Sales_Coverage_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Territory.Sales Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity</description>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Qualification</relationshipLabel>
        <relationshipName>Qualification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Cisco_s_Buy_Sell_Entitiy__c</fullName>
        <label>Other Cisco's Buy/Sell Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_NBM_Offer_Type__c</fullName>
        <label>Other NBM Offer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Strategic_Imperative__c</fullName>
        <label>Sales Expert Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_deal_Gross_Margin__c</fullName>
        <label>Overall deal Gross Margin %</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Partner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Channel accounts are allowed to be added as partners.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Channel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Bookings__c</fullName>
        <label>Partner Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_BDM__c</fullName>
        <label>GSPO Partner Sales BDM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Services_BDM__c</fullName>
        <label>GSPO Partner Services BDM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Tech_BDM__c</fullName>
        <label>GSPO Partner Tech BDM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>GSPO Partner OEM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AirWatch</fullName>
                </value>
                <value>
                    <fullName>BMC</fullName>
                </value>
                <value>
                    <fullName>CA Technologies</fullName>
                </value>
                <value>
                    <fullName>Citrix</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>Good Technology</fullName>
                </value>
                <value>
                    <fullName>HDS</fullName>
                </value>
                <value>
                    <fullName>Intel</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>MobileIron</fullName>
                </value>
                <value>
                    <fullName>MTP - Google/Apple/RIM</fullName>
                </value>
                <value>
                    <fullName>NetApp</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RedHat</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>VCE</fullName>
                </value>
                <value>
                    <fullName>VMWare</fullName>
                </value>
                <value>
                    <fullName>Zenprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Deal_Size_Range__c</fullName>
        <label>Potential Deal Size Range ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Dollar_Amount__c</fullName>
        <label>Pre-Sales Dollar Amount ($000)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Head_Count__c</fullName>
        <label>Pre-Sales Head Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probability_of_Success__c</fullName>
        <label>Probability of Success</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-25%</fullName>
                </value>
                <value>
                    <fullName>25-50%</fullName>
                </value>
                <value>
                    <fullName>50-75%</fullName>
                </value>
                <value>
                    <fullName>75-100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_A_TCCV_000__c</fullName>
        <formula>IF(VALUE(Contract_Duration__c) &gt;= 12, (Total_Product_Size__c/VALUE(Contract_Duration__c))*12, Total_Product_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product A-TCCV ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Product Description</description>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Sales_Contact__c</fullName>
        <description>Product Sales Contact</description>
        <label>Product Sales Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Single_Booking_Value_000__c</fullName>
        <description>Products Single Booking Value ($000)</description>
        <label>Product Single Booking Value ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_in_K__c</fullName>
        <description>Total Product Value</description>
        <label>Product $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <description>Program Manager</description>
        <label>Program Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pursuit_Lead_Time_Allocated__c</fullName>
        <description>Pursuit Lead Time Allocated</description>
        <inlineHelpText>% out of 100</inlineHelpText>
        <label>Pursuit Lead Time Allocated %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pursuit_Level__c</fullName>
        <label>Pursuit Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Expert Advice</fullName>
                </value>
                <value>
                    <fullName>2-Light Touch</fullName>
                </value>
                <value>
                    <fullName>3-Full Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pursuit_Probability__c</fullName>
        <description>Pursuit Probability</description>
        <label>Pursuit Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pursuit_Type_ITaaB__c</fullName>
        <description>Pursuit Type-ITaaB</description>
        <label>Pursuit Type-ITaaB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pitch</fullName>
                </value>
                <value>
                    <fullName>Point of View</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pursuit_Type__c</fullName>
        <label>Pursuit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>A-TCCV</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Expand</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Transformational</fullName>
                </value>
                <value>
                    <fullName>Managed Service</fullName>
                </value>
                <value>
                    <fullName>XaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Assignment__c</fullName>
        <description>Qualification Assignment</description>
        <label>Qualification Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>LCD</fullName>
                </value>
                <value>
                    <fullName>SET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Forecast_Status__c</fullName>
        <description>Qualification_Forecast Status</description>
        <label>Qualification Forecast Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
                <value>
                    <fullName>Not Forecastable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTM_Strategy__c</fullName>
        <label>GSPO RTM Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sell-Through (Cisco Partner Channel)</fullName>
                </value>
                <value>
                    <fullName>Sell-To</fullName>
                </value>
                <value>
                    <fullName>Sell-With (Tech Partner-Led)</fullName>
                </value>
                <value>
                    <fullName>Sell With (Cisco-Led GTM)</fullName>
                </value>
                <value>
                    <fullName>Sell-Through (Partner's Channel)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>if(BEGINS(TEXT(Theater__c), 'Americas'),'Americas',
if(BEGINS(TEXT(Theater__c), 'APJC'), 'APJC', 
if(BEGINS(TEXT(Theater__c), 'EMEAR'),'EMEAR',
if(BEGINS(TEXT(Theater__c), 'GSP'), 'GSP',''))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_SSF_Finance_Contact__c</fullName>
        <description>Regional SSF Finance Contact</description>
        <label>Regional SSF Finance Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <description>Request ID</description>
        <displayFormat>REQ-{0}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NBM_Remodel2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Deferral__c</fullName>
        <label>Revenue Deferral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rights_to_Intellectual_Property__c</fullName>
        <label>Cisco Rights to Intellectual Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment__c</fullName>
        <label>Risk Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Sharing__c</fullName>
        <label>Risk Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SET_Finance__c</fullName>
        <label>SET Finance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWSS_Total__c</fullName>
        <description>SWSS Total $</description>
        <label>SWSS Total $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SWSS_of_Product_vs_Service__c</fullName>
        <description>SWSS % of Product vs Service</description>
        <label>SWSS % of Product vs Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SW_Buying_Program_Total_Duration_Months__c</fullName>
        <description>SW Buying Program Total Duration(Months)</description>
        <label>SW Buying Program Total Duration(Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screening_Notes__c</fullName>
        <label>Screening Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Pursuit_Lead_Time_Allocated__c</fullName>
        <description>Secondary Pursuit Lead Time Allocated</description>
        <inlineHelpText>% out of 100</inlineHelpText>
        <label>Secondary Pursuit Lead Time Allocated %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Pursuit_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Pursuit Lead</description>
        <label>Secondary Pursuit Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Qualifications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>SLED</fullName>
                </value>
                <value>
                    <fullName>FEDERAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Account Manager</description>
        <label>Service Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Qualifications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Elements__c</fullName>
        <label>Service Delivery Elements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FTS</fullName>
                </value>
                <value>
                    <fullName>MCS</fullName>
                </value>
                <value>
                    <fullName>NOS</fullName>
                </value>
                <value>
                    <fullName>Metering</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>PMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Delivery_Executive__c</fullName>
        <description>Service Delivery Executive</description>
        <label>Service Delivery Executive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Manager__c</fullName>
        <description>Service_Delivery_Manager</description>
        <label>CMS Service Delivery Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Owner__c</fullName>
        <label>Service Delivery Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Design_Lead_Time_Allocated__c</fullName>
        <description>Service Design Lead Time Allocated</description>
        <inlineHelpText>% out of 100</inlineHelpText>
        <label>Service Design Lead Time Allocated %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Design_Lead__c</fullName>
        <description>Service Design Tower Lead</description>
        <label>Service Design Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Improvement_Tower_Lead__c</fullName>
        <description>Service improvement Tower Lead</description>
        <label>Service Improvement Tower Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Operation_Tower_Lead__c</fullName>
        <description>Service Operation Tower Lead</description>
        <label>Service Operation Tower Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>